--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Booking Board",
   "main": "app.js",
   "scripts": {
-    "test": "\"echo \\\"Error: no test specified\\\" && exit 1\""
+  "start": "cross-env NODE_ENV=development node server.js",
+  "test": "npm run test:backend",
+  "test:backend": "cross-env NODE_ENV=test jest --config jest.config.js --runInBand"
   },
   "keywords": [
     "node",
@@ -15,12 +17,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "sequelize": "^6.37.7"
+    "@heroicons/react": "^2.2.0",
+    "dotenv-flow": "^4.1.0",
+    "sequelize": "^6.37.7",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.0",
+    "@babel/preset-env": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "@eslint/js": "^9.29.0",
+    "babel-jest": "^30.0.4",
+    "cross-env": "^7.0.3",
     "eslint": "^9.29.0",
     "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.2.0"
+    "globals": "^16.2.0",
+    "jest": "^30.0.3",
+    "supertest": "^7.1.1"
   }
 }
